5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4152/executions/1664_2972.log
== TEST (2019-04-16 10:47:20) 
-- CODE:
S0 = int(input("Digite aqui a posicao inicial do objeto: "))
v = float(input("Digite aqui a velocidade do objeto: "))
t = int(input("Digite aqui o tempo de deslocamento: "))
total = S0 + v * t
print(total)
if(total < 1000):
	print("Nao")
else:
	print("Sim")

-- OUTPUT:
3002.0
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:47:33) 
-- CODE:
S0 = int(input("Digite aqui a posicao inicial do objeto: "))
v = float(input("Digite aqui a velocidade do objeto: "))
t = int(input("Digite aqui o tempo de deslocamento: "))
total = S0 + v * t
print(total)
if(total < 1000):
	print("Nao")
else:
	print("Sim")

-- EXECUTION TIME:
0.138692
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
Sim
---- user output:
3002.0
Sim
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
Sim
---- user output:
4252.0
Sim
-- TEST CASE 3:
---- input:
5
50
15
---- correct output:
755
Nao
---- user output:
755.0
Nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:48:09) 
-- CODE:
S0 = int(input("Digite aqui a posicao inicial do objeto: "))
v = float(input("Digite aqui a velocidade do objeto: "))
t = float(input("Digite aqui o tempo de deslocamento: "))
total = S0 + v * t
print(total)
if(total < 1000):
	print("Nao")
else:
	print("Sim")

-- OUTPUT:
3002.0
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:48:20) 
-- CODE:
S0 = int(input("Digite aqui a posicao inicial do objeto: "))
v = float(input("Digite aqui a velocidade do objeto: "))
t = float(input("Digite aqui o tempo de deslocamento: "))
total = S0 + v * t
print(total)
if(total < 1000):
	print("Nao")
else:
	print("Sim")

-- EXECUTION TIME:
0.150679
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
Sim
---- user output:
3002.0
Sim
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
Sim
---- user output:
4252.0
Sim
-- TEST CASE 3:
---- input:
5
50
15
---- correct output:
755
Nao
---- user output:
755.0
Nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:49:27) 
-- CODE:
S0 = float(input("Digite aqui a posicao inicial do objeto: "))
v = float(input("Digite aqui a velocidade do objeto: "))
t = int(input("Digite aqui o tempo de deslocamento: "))
total = S0 + v * t
print(total)
if(total < 1000):
	print("Nao")
else:
	print("Sim")

-- EXECUTION TIME:
0.224797
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
Sim
---- user output:
3002.0
Sim
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
Sim
---- user output:
4252.0
Sim
-- TEST CASE 3:
---- input:
5
50
15
---- correct output:
755
Nao
---- user output:
755.0
Nao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:51:47) 
-- CODE:
S0 = int(input("Digite aqui a posicao inicial do objeto: "))
v = float(input("Digite aqui a velocidade do objeto: "))
t = int(input("Digite aqui o tempo de deslocamento: "))
S = S0 + v * t
print(total)
if(S < 1000):
	print("Nao")
else:
	print("Sim")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:52:07) 
-- CODE:
S0 = int(input("Digite aqui a posicao inicial do objeto: "))
v = int(input("Digite aqui a velocidade do objeto: "))
t = int(input("Digite aqui o tempo de deslocamento: "))
S = S0 + v * t
print(total)
if(S < 1000):
	print("Nao")
else:
	print("Sim")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 10:52:27) 
-- CODE:
S0 = int(input("Digite aqui a posicao inicial do objeto: "))
v = int(input("Digite aqui a velocidade do objeto: "))
t = int(input("Digite aqui o tempo de deslocamento: "))
S = S0 + v * t
print(S)
if(S < 1000):
	print("Nao")
else:
	print("Sim")

-- OUTPUT:
3002
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 10:52:36) 
-- CODE:
S0 = int(input("Digite aqui a posicao inicial do objeto: "))
v = int(input("Digite aqui a velocidade do objeto: "))
t = int(input("Digite aqui o tempo de deslocamento: "))
S = S0 + v * t
print(S)
if(S < 1000):
	print("Nao")
else:
	print("Sim")

-- EXECUTION TIME:
0.137489
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
Sim
---- user output:
3002
Sim
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
Sim
---- user output:
4252
Sim
-- TEST CASE 3:
---- input:
5
50
15
---- correct output:
755
Nao
---- user output:
755
Nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
